# phenome-10k

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Vagrantfile  activate  app.py  config.py  docker-compose.yml  gbif.py  get-token.py  package-lock.json  package.json  pytest.ini  requirements.txt  start.sh  token.js  token.py  vault-token
.github/workflows/: sync.yml
ansible/: get-token.py  playbook.yml
ansible/inventories/: development.ini  production.ini
api/: MANIFEST.in  pyproject.toml  requirements.txt  setup.py  wsgi.py
api/migrations/: env.py
api/migrations/versions/: 01816b2fcaea_add_tag_data.py  1aa4435fb125_gbif_big_int.py  214e8c781632_create_initial_tables.py  2548a3a841a1_separate_gbif_species_and_occurrence.py  2c7579ef30d0_add_uniquifier.py  4420116fa319_add_queue.py  4d0bb8428937_add_user_roles.py  77f6b43f2bfa_user_confirmation.py  8b76ef5c47ef_gbif_taxonomy.py  e64692114f90_add_storage_area_to_file.py
api/phenome10k/: __init__.py  celery_worker.py  cli.py  config.py  extensions.py
api/phenome10k.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
api/phenome10k/data/: gbif.py  scan_store.py  slugs.py  tmp_upload_store.py
api/phenome10k/forms/: __init__.py  login.py  publication_upload.py  register.py  scan_upload.py
api/phenome10k/models/: __init__.py  file_attachment.py  links.py  publication.py  queue.py  scan.py  tag.py  taxonomy.py  user.py
api/phenome10k/routes/: __init__.py  _decorators.py  _utils.py  admin.py  errors.py  files.py  home.py  publications.py  query.py  scans.py  user.py
api/phenome10k/schemas/: __init__.py  _utils.py  file_attachment.py  publication.py  response.py  scan.py
api/phenome10k/tasks/: __init__.py  apium.py  ctm.py
api/phenome10k/templates/: base.html  email_base.html  email_base.txt
api/phenome10k/templates/docs/: redoc.html
api/phenome10k/templates/errors/: 403.html  404.html  500.html
api/phenome10k/templates/home/: about.html  index.html  rss.xml
api/phenome10k/templates/security/: _macros.html  forgot_password.html  login_user.html  register_user.html  reset_password.html  send_confirmation.html
api/phenome10k/templates/security/email/: change_notice.html  change_notice.txt  confirmation_instructions.html  confirmation_instructions.txt  reset_instructions.html  reset_instructions.txt  reset_notice.html  reset_notice.txt
api/phenome10k/templates/snippets/: nav.html  subnav.html
api/phenome10k/templates/user/: contribute.html  login.html  profile.html  register.html
app/: __init__.py  errors.py  forms.py  gbif.py  models.py  routes.py  rpc.py
app/data/: ctmconv.py  scan_store.py  slugs.py  tmp_upload_store.py
app/static/: home.css  index.css  upload.css
app/tasks/: client.py  server.py
app/templates/: about.html  base.html  contribute.html  create-publication.html  index.html  library.html  login.html  publication.html  register.html  rss.xml  scan.html  signup.html  upload.html
app/tests/: test_models.py  test_routes.py
app/vue/: server.js
docker/: .env  local.env.template
docker/app-celery/: Dockerfile  requirements.txt
docker/app-flask/: Dockerfile  entrypoint
docker/app-flower/: Dockerfile
docker/app-node/: Dockerfile  entrypoint
docker/lb/: Dockerfile  phenome10k.org.conf
migrations/: env.py
migrations/versions/: 1cdbca4d6453_remove_title_from_file_model.py  214e8c781632_create_initial_tables.py  600c38d10447_uploads_table.py  6ab07e63e2a9_redefine_relationship_with_attachments.py  6e10d09c97f2_users_table.py  6fbccdae0ab4_adjust_tag_taxonomy.py  a85d1db64812_add_size_column_to_files.py  c240994711dd_add_generic_attachment_table.py  e64692114f90_add_storage_area_to_file.py  ee36c2cf4e0b_add_taxonomy_table.py  ef6bd83f563f_initial_tables.py  (+1 more)
node/: index.js  route.mjs
scripts/: tasks.sh  test.sh
static/: about.css  contribute.css  index.css
task_queue/: apium.py  tasks.py
vagrant/: data.sh  dependency_manager.rb
web/: package-lock.json  package.json
(+235 files in other folders)
